exports[`<Page /> name defaults to Page 1`] = `
<page
  name="Page 1" />
`;

exports[`<Page /> name passes its name 1`] = `
<page
  name="bar" />
`;

exports[`<Page /> name passes its name and avoids Symbol page conflict 1`] = `
<page
  name="Symbols (renamed to avoid conflict)" />
`;

exports[`<Page /> renders children 1`] = `
<page
  name="Page 1">
  <foo>
    <bar />
  </foo>
</page>
`;
